src/objects/sma__MABaseObject__c.object
<CustomObject>
    <fields>
        <fullName>sma__AddressObject__c</fullName>
        <label>Address Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__AllowGlobalSearch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows for records to be searched inside MapAnything with this Base Object.</description>
        <label>Allow Global Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__AutoAssignmentDirtyFlag__c</fullName>
        <label>Auto Assignment Dirty Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__BatchSize__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanCity__c</fullName>
        <label>Clean City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanCountry__c</fullName>
        <label>Clean Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanCounty__c</fullName>
        <label>Clean County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanDistrict__c</fullName>
        <label>Clean District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanPostalCode__c</fullName>
        <label>Clean Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanState__c</fullName>
        <label>Clean State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CleanStreet__c</fullName>
        <label>Clean Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__DeviceId__c</fullName>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__DeviceType__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__DeviceVendor__c</fullName>
        <label>Device Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__DisableGlobalSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables searching for records inside MapAnything with this Base Object.</description>
        <label>Disable Global Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapIt_Proximity_Measurement_Unit__c</fullName>
        <label>MapIt Proximity Measurement Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__MapIt_Proximity_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapIt Proximity On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MapIt_Proximity_Radius__c</fullName>
        <label>MapIt Proximity Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MapIt_Show_Inside_Shape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapIt Show Inside Shape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MapIt_Zoom_Control__c</fullName>
        <defaultValue>16</defaultValue>
        <label>MapIt Zoom Control</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__PriorityField__c</fullName>
        <label>Priority Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__PriorityType__c</fullName>
        <label>Priority Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einstein</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Quality__c</fullName>
        <label>Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RecordTypeId__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RoutingEndTime__c</fullName>
        <label>Routing End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RoutingHasAddress__c</fullName>
        <label>Routing Has Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RoutingIsFlexible__c</fullName>
        <label>Routing Is Flexible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RoutingStartTime__c</fullName>
        <label>Routing Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Shape__c</fullName>
        <description>This field is used to store lookup field names to MapAnything territories which can be set up for Geofence Layers.</description>
        <label>Shape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Similarity__c</fullName>
        <label>Similarity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__SkipFailedGeocodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Failed Geocodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip10__c</fullName>
        <label>Tooltip Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip11__c</fullName>
        <label>Tooltip Eleven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip12__c</fullName>
        <label>Tooltip Twelve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marker</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__VerifiedLatitude__c</fullName>
        <label>Verified Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__VerifiedLongitude__c</fullName>
        <label>Verified Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__testLat__c</fullName>
        <label>testLat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Base Object</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__Name__c</columns>
        <columns>sma__Processing__c</columns>
        <columns>sma__AddressObject__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Base Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>